updated to android 11

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">LiD</string>
+    <string name="app_name">Leben In Deutschland</string>
     <string name="instructions">Über LiD</string>
     <string name="goto_to_app">ZUR APP</string>
     <string name="instruction_details">
